--- a/src/Libraries/Fidar.Infrastructure/Fidar.Infrastructure.csproj
+++ b/src/Libraries/Fidar.Infrastructure/Fidar.Infrastructure.csproj
@@ -5,5 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.35" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fidar.Domain\Fidar.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
