--- a/src/Prsentation/Fidar.API/Fidar.API.csproj
+++ b/src/Prsentation/Fidar.API/Fidar.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\Fidar.Application\Fidar.Application.csproj" />
+  </ItemGroup>
+
 </Project>
